# python_packaging_demo

./: pyproject.toml  setup.cfg  setup.py  tox.ini
src/dbzpipe/: __init__.py  cli.py  dbzpipe.py
