# All the metadata about this project: name, description, etc

[metadata]
name = dbzpipe
version = 0.0.1
description = Description/blurb
long_description = TODO: try to read long description from a file?
#long_description_content_type = text/markdown
author = Robert B. Hanviriyapunt
author_email = roberthana+over-dbzpipe@mac.com
license = TODO: what is the license?
;license_files =
;    LICENSE
platforms = unix, linux, osx, cygwin, win32
classifiers =
    Programming Language :: Python :: 3.8
url = TODO: add github url
;project_urls={
;    "Bug Tracker": "https://github.com/liuzheng1990/python_packaging_demo/issues",
;},
;classifiers=[
;    "Operating System :: OS Independent",
;],

[options]
# ? package in package_dir to be built?
packages =
    dbzpipe
# Just here for example, not really used in project code
# Note: version is not as specific as requirements.txt
install_requires =
    requests
python_requires = >=3.6
# Note: this specifies where the package source is
package_dir =
    =src
# ?
zip_safe = no

[options.entry_points]
console_scripts =
    dbzpipe = dbzpipe.cli:main

[options.extras_require]
testing =
    pytest>=6.0
    pytest-cov>=2.0
    mypy>=0.910
    flake8>=3.9
    tox>=3.24

[options.package_data]
dbzpipe = py.typed

[flake8]
max-line-length = 160